src/ui/components/Views/NonDevView.css
.right-sidebar {
  background: var(--theme-body-background);
  display: flex;
  flex-direction: column;
  width: 100%;
}

.right-sidebar-toolbar {
  height: 40px;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0px 20px;
  background: var(--theme-toolbar-background);
  border-bottom: 1px solid var(--theme-splitter-color);
  justify-content: space-between;
}

.right-sidebar-toolbar-item {
  font-size: 1.25rem;
  color: var(--dark-blue);
}

.right-sidebar .event-breakpoints button.expand-dropdown {
  padding: 4px;
  border-radius: 4px;
  cursor: pointer;
  border: none;
}

.right-sidebar .event-breakpoints button.expand-dropdown .img {
  background: var(--theme-comment);
}

.right-sidebar .event-breakpoints button.expand-dropdown:hover {
  background: var(--theme-toolbar-background-hover);
}

.right-sidebar .event-breakpoints .event-listeners {
  padding: 0px;
}

.right-sidebar .event-breakpoints .devtools-searchinput-clear {
  display: none;
}

.right-sidebar .event-listeners .event-listeners-content {
    height: 300px;
    overflow-y: auto;
}

.right-sidebar .comments-panel {
  flex-grow: 1;
}

